[tool.poetry]
name = "tap-hubspot"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
singer-python="5.8.1" 
requests = "2.22.0"
backoff="1.8.0"
ratelimit = "2.2.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
